--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,7 +81,7 @@ release:
     PYPI_TOKEN: ${PYPI_VJA_TOKEN}
   before_script:
     - apt-get update && apt-get install -y --no-install-recommends git-core ca-certificates python3-full python-is-python3 twine
-    - npm install -g semantic-release @semantic-release/gitlab @semantic-release/changelog conventional-changelog-conventionalcommits@6 @semantic-release/commit-analyzer @semantic-release/git semantic-release-pypi
+    - npm install -g semantic-release @semantic-release/gitlab @semantic-release/changelog conventional-changelog-conventionalcommits @semantic-release/commit-analyzer @semantic-release/git semantic-release-pypi
   script:
     - python3 --version
     - python3 -m venv ./venv
