--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -1,5 +1,5 @@
 x-vikunja-image: &vikunja-image
-  image: vikunja/vikunja:0.24.0
+  image: ${VIKUNJA_IMAGE:-vikunja/vikunja:0.24.0}
 
 services:
   vikunja:
