fix(test): latest vikunja image requires VIKUNJA_SERVICE_PUBLICURL

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ stages:
   - python3 -m pip install .
   - vja --version
 
-  - mkdir $PWD/files
+  - mkdir -p $PWD/files
   - chmod a+w $PWD/files
   - docker compose -f tests/docker-compose.yml pull vikunja
   - docker compose -f tests/docker-compose.yml up -d
