--- a/tests/.vjatest_dind/vja.rc
+++ b/tests/.vjatest_dind/vja.rc
@@ -5,13 +5,14 @@ api_url=http://docker:3456/api/v1
 [output]
 # This section allows to specify custom output formats (i.e. selecting displayed columns).
 # These can be activated like "vja ls --custom-format=tasklist_short".
-# Be careful: Any code which is entered here gets executed at runtime (python eval()).
+# Be careful: Any code which is entered here will be executed at runtime (python eval()).
 # Do not use --custom-format if you feel uncomfortable with that.
 
 tasklist_long={x.id:6} ({x.priority}) {"*" if x.is_favorite else " "} {x.title:50.50} {x.due_date.strftime("%a %d.%m %H:%M") if x.due_date else "":15.15} {"A" if x.reminders else " "}{"R" if x.repeat_after else " "}{"D" if x.description_text else " "} {x.project.title:20.20} {x.labels:20.20} {x.urgency:3}
 tasklist_short={x.id:6} {x.title:50.50}
 ids_only={x.id}
 reimport=vja add --force-create \'{x.title}\' --project=\'{x.project.title}\' --priority={x.priority}{" --favorite" if x.is_favorite else ""}{"".join(" --label=\'"+i.title+"\'" for i in x.label_objects)} --due-date="{x.due_date if x.due_date else ""}" --reminder="{x.reminders[0].reminder if x.reminders else ""}" --description=\'{x.description}\'
+tasklist_gantt={x.id:6} {x.title:50.50} {x.due_date.strftime("%Y-%m-%dT%H:%M") if x.due_date else "":16.16} {x.start_date.strftime("%Y-%m-%dT%H:%M") if x.start_date else "":16.16} {x.end_date.strftime("%Y-%m-%dT%H:%M") if x.end_date else "":16.16}
 
 [urgency_coefficients]
 due_date_weight=1.0
