--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
+requires = ["setuptools>=77.0.3", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -11,7 +11,8 @@ requires-python = ">=3.9"
 authors = [
   { name = "ce72" }
 ]
-license = { text = "GNU General Public License v3 (GPLv3)" }
+license = "GPL-3.0-or-later"
+license-files = [ "LICENSE" ]
 classifiers = [
   "Environment :: Console",
   "Intended Audience :: End Users/Desktop",
@@ -20,7 +21,6 @@ classifiers = [
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
-  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
 ]
 
 dependencies = [
@@ -33,6 +33,12 @@ dependencies = [
 
 [project.scripts]
 vja = "vja.cli:cli"
+
+[project.urls]
+Homepage = "https://gitlab.com/ce72/vja"
+Repository = "https://gitlab.com/ce72/vja.git"
+Issues = "https://gitlab.com/ce72/vja/-/issues"
+Changelog = "https://gitlab.com/ce72/vja/-/blob/main/CHANGELOG.md"
 
 [tool.setuptools.packages.find]
 include = ["vja*"]
