ci(test): add integration-test-legacy for vikunja:0.24.6
Tests are being run with default settings for :1.0.0 and :unstable and with --oldapi flag for :0.24.6.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,7 @@ pylint:
     - if: $CI_COMMIT_BRANCH && $CI_COMMIT_REF_SLUG !~ /renovate.*/
       when: manual
 
-integration-test:
+integration-test-prod:
   stage: test
   image:
     name: docker:cli
@@ -58,7 +58,7 @@ integration-test:
   script:
     - *start_vikunja
     - export VJA_CONFIGDIR=tests/.vjatest_dind
-    - coverage run --omit='*test*' -m pytest --oldapi
+    - coverage run --omit='*test*' -m pytest
     - coverage report --omit='*test*'
     - coverage xml --omit='*test*'
   coverage: '/(?i)total.*? (100(?:\.0+)?\%|[1-9]?\d(?:\.\d+)?\%)$/'
@@ -90,6 +90,29 @@ integration-test-unstable:
     - *start_vikunja
     - export VJA_CONFIGDIR=tests/.vjatest_dind
     - pytest
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH || $CI_COMMIT_BRANCH == "beta" || $CI_COMMIT_BRANCH == "rc"
+      when: on_success
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+      when: on_success
+    - if: $CI_COMMIT_BRANCH && $CI_COMMIT_REF_SLUG !~ /renovate.*/
+      when: manual
+
+integration-test-legacy:
+  stage: test
+  image:
+    name: docker:cli
+  services:
+    - name: docker:dind
+  variables:
+    DOCKER_DRIVER: overlay2
+    DOCKER_TLS_CERTDIR: ""
+    VIKUNJA_IMAGE: vikunja/vikunja:0.24.6
+  allow_failure: true
+  script:
+    - *start_vikunja
+    - export VJA_CONFIGDIR=tests/.vjatest_dind
+    - pytest --oldapi
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH || $CI_COMMIT_BRANCH == "beta" || $CI_COMMIT_BRANCH == "rc"
       when: on_success
